--- a/feedback.html
+++ b/feedback.html
@@ -60,6 +60,11 @@
                         <p class="lead text-center mb-4">Help us improve our tutoring services</p>
 
                         <form id="feedbackForm" action="https://formsubmit.co/bde812449ddc492f1d394510ec890962" method="POST">
+                                <input type="text" name="_honey" style="display:none">
+      
+      <input type="hidden" name="_captcha" value="false">
+      
+      <input type="hidden" name="_next" value="https://youngsteamvisionaries.academy/thank-you.html">
                             <div class="row mb-4">
                                 <div class="col-md-6">
                                     <label for="studentName">Student's Name*</label>
