--- a/steam-form.html
+++ b/steam-form.html
@@ -318,17 +318,17 @@
                 </div>
             </div>
             <div class="col-12 mb-3">
-                <label>Would you like reoccuring education, or a one time test session to see what it's like? (please note you always change by emailing us)*</label>
+                <label>Would you like reoccuring sessions or a one time session to see what it's like? (please note you always change by emailing us)*</label>
                 <div class="form-check mb-2">
                     <input class="form-check-input" type="radio" name="programType" id="oneTime" value="trial" required>
                     <label class="form-check-label" for="oneTime">
-                        Trial Session
+                        One Time Session
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="programType" id="recurring" value="recurring">
                     <label class="form-check-label" for="recurring">
-                        Our Program
+                        Reoccuring
                     </label>
                 </div>
             </div>
