--- a/thank-you.html
+++ b/thank-you.html
@@ -18,17 +18,18 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <style>
         .thank-you-section {
-            min-height: 100vh;
+            position: relative;
+            z-index: 1;
+            min-height: 90vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 100px 0;
-            background: linear-gradient(to bottom, #ffffff, #ffffff, #f9f7f7);
-            margin-top: -76px; 
+            margin-top: 5px;
         }
         
         .thank-you-box {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 60px;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -74,6 +75,8 @@
     </style>
 </head>
 <body>
+    <div id="particles-js"></div>
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white">
         <div class="container">
@@ -167,5 +170,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="javascript/particles-config.js"></script>
 </body>
 </html>
