--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/style.css" />
     <link href="css/contact.css" rel="stylesheet" />
-    <link href="css/footer.css" rel="stylesheet" />
-        <link href="css/navbar.css" rel="stylesheet" />
+
 
     <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -28,40 +29,88 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-    <img src="images/logo.jpg" alt="Young STEAM Visionaries Logo" class="navbar-logo">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
+        <div class="container flex-column">
+          <!-- Top row -->
+          <div
+            class="d-flex align-items-center w-100 top-row justify-content-center"
+          >
+            <a class="navbar-brand fw-bold me-2" href="index.html"
+              >Young STEAM Visionaries</a
+            >
 
-    <span class="brand-text">Young STEAM Visionaries </span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
+            <!-- Desktop search -->
+            <form class="ms-2 me-3 d-none d-lg-block">
+              <div class="input-group search-bar">
+                <span class="input-group-text bg-white border-end-0"
+                  ><i class="bi bi-search"></i
+                ></span>
+                <input
+                  type="search"
+                  class="form-control border-start-0"
+                  placeholder='Search "addition worksheets"'
+                />
+              </div>
+            </form>
+
+            <!-- Login + Sign Up -->
+            <a
+              href="#"
+              class="text-decoration-none me-3 d-none d-lg-block login-link"
+              >Log In</a
+            >
+            <button class="btn btn-primary" @click="openModal">Sign Up</button>
+
+            <!-- Mobile toggler -->
+            <button
+              class="navbar-toggler ms-2"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navMenu"
+            >
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        More
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="become-tutor.html">Become A Tutor</a></li>
-                        <li><a class="dropdown-item" href="feedback.html">Student Feedback</a></li>
+          </div>
 
-                        <li><a class="dropdown-item" href="team.html">Our Tutors</a></li>
-                        <li><a class="dropdown-item" href="faq.html">FAQ</a></li>
-                    </ul>
-                </li>
-                    <li class="nav-item"><a class="nav-link cta-button" href="get-started.html">Get Started</a></li>
-                </ul>
-            </div>
+          <!-- Bottom row -->
+          <div class="collapse navbar-collapse mt-3 w-100" id="navMenu">
+            <!-- Mobile search -->
+            <form class="d-lg-none my-3 w-100">
+              <div class="input-group search-bar">
+                <span class="input-group-text bg-white border-end-0"
+                  ><i class="bi bi-search"></i
+                ></span>
+                <input
+                  type="search"
+                  class="form-control border-start-0"
+                  placeholder='Search "addition worksheets"'
+                />
+              </div>
+            </form>
+
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="worksheet.html">Worksheets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Additional Information</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <!-- Contact  -->
     <section class="contact-section">
@@ -149,67 +198,58 @@
   </div>
 </div>
     </section>
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-0">
-            <h5 class="footer-heading">Young STEAM Visionaries</h5>
-            <p class="footer-text">
-              Empowering young minds through interactive STEAM education and support.
-            </p>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-0">
-            <h5 class="footer-heading">Contact Us</h5>
-            <ul class="footer-contact">
-              <li>
-                <i class="fas fa-envelope"></i>
-                <a href="mailto:YoungSTEAMVisionaries@gmail.com"
-                  >YoungSTEAMVisionaries@gmail.com</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4">
-            <h5 class="footer-heading">Follow Us</h5>
-            <div class="social-links">
-              <a
-                href="https://linkedin.com/company/YoungSTEAMVisionaries"
-                target="_blank"
-                class="social-link"
-              >
-                <i class="fab fa-linkedin"></i>
-              </a>
-              <a
-                href="https://facebook.com/YoungSTEAMVisionaries"
-                target="_blank"
-                class="social-link"
-              >
-                <i class="fab fa-facebook"></i>
-              </a>
+      <!-- Footer -->
+      <footer class="py-4 bg-dark text-light">
+        <div class="container">
+          <div class="row align-items-start">
+            <div class="col-md-6 mb-3 mb-md-0">
+              <h5 class="mb-3" style="font-weight: 600">
+                Young STEAM Visionaries
+              </h5>
+              <p class="mb-0" style="max-width: 400px; color: #d1d5db">
+                Free worksheets, activities, and personalized support to help
+                young students.
+              </p>
+            </div>
+            <div class="col-md-6 text-md-end">
+              <h5 class="mb-3" style="font-weight: 600">Contact Us</h5>
+              <p class="mb-0" style="color: #d1d5db">
+                <i class="bi bi-envelope-fill me-2"></i>
+                YoungSTEAMVisionaries@gmail.com
+              </p>
             </div>
           </div>
-        </div>
-
-        <!-- Copyright -->
-        <div class="footer-bottom">
+          <hr class="my-4" style="border-color: #bfc9d1; opacity: 0.3" />
           <div class="row">
             <div class="col-12 text-center">
-              <p class="copyright">
-                © 2024 Young STEAM Visionaries. All rights reserved.
-              </p>
-              <span class="designer-credit"
-                >Website designed by
-                
-                  Kevin Hong
-                </span
-              >
+              <small style="color: #d1d5db">
+                &copy; 2025 Young Steam Visionaries. All rights reserved.
+                &nbsp;|&nbsp; Website designed by Kevin Hong
+              </small>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
+
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        var form = document.getElementById("worksheetSearchForm");
+        if (form) {
+          form.addEventListener("submit", function (e) {
+            e.preventDefault();
+            var input = document.getElementById("worksheetSearchInput");
+            var val = input.value.trim();
+            if (val) {
+              // Redirect to worksheet.html with keyword param
+              window.location.href =
+                "worksheet.html?keyword=" + encodeURIComponent(val);
+            }
+          });
+        }
+      });
+    </script>
   </body>
 </html>
