--- a/tutor.html
+++ b/tutor.html
@@ -2,31 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Share your feedback with Young STEAM Visionaries. Help us improve our free worksheets, activities, and tutoring for K-8 students." />
-    <meta property="og:title" content="Feedback | Young STEAM Visionaries" />
-    <meta property="og:description" content="Share your feedback and help us improve our free worksheets, activities, and tutoring for K-8 students." />
+    <meta name="description" content="Request a tutor from Young STEAM Visionaries. Get matched with a peer tutor for free K-8 support in math, science, reading, and more." />
+    <meta property="og:title" content="Request a Tutor | Young STEAM Visionaries" />
+    <meta property="og:description" content="Get matched with a peer tutor for free K-8 support in math, science, reading, and more." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://youngsteamvisionaries.academy/feedback.html" />
+    <meta property="og:url" content="https://youngsteamvisionaries.academy/tutor.html" />
     <meta property="og:image" content="https://youngsteamvisionaries.academy/images/logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Feedback | Young STEAM Visionaries" />
-    <meta name="twitter:description" content="Share your feedback and help us improve our free worksheets, activities, and tutoring for K-8 students." />
+    <meta name="twitter:title" content="Request a Tutor | Young STEAM Visionaries" />
+    <meta name="twitter:description" content="Get matched with a peer tutor for free K-8 support in math, science, reading, and more." />
     <meta name="twitter:image" content="https://youngsteamvisionaries.academy/images/logo.png" />
-    <link rel="canonical" href="https://youngsteamvisionaries.academy/feedback.html" />
-    <meta name="keywords" content="feedback, Young STEAM Visionaries, free worksheets, printable worksheets, K-8 worksheets, STEAM worksheets, tutoring feedback, educational feedback, website feedback, student support, learning activities, educational engagement, educational excellence, educational innovation, educational inspiration, educational creativity, educational curiosity, educational motivation, educational achievement, educational success, educational growth, educational journey, educational potential, educational fun, educational made easy, accessible education, inclusive education" />
+    <link rel="canonical" href="https://youngsteamvisionaries.academy/tutor.html" />
+    <meta name="keywords" content="request a tutor, Young STEAM Visionaries, peer tutor, free tutoring, K-8 tutoring, STEAM tutoring, math tutor, science tutor, reading tutor, educational support, student support, learning activities, educational engagement, educational excellence, educational innovation, educational inspiration, educational creativity, educational curiosity, educational motivation, educational achievement, educational success, educational growth, educational journey, educational potential, educational fun, educational made easy, accessible education, inclusive education" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feedback | Young STEAM Visionaries</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>Request a Tutor | Young STEAM Visionaries</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
         <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <!-- Navbar (reuse style) -->
       <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
         <div class="container flex-column">
           <div
@@ -268,14 +272,21 @@
         </div>
       </nav>
 
-    <!-- Hero Section (reuse from about/services) -->
+
+    <!-- Hero Section -->
     <section class="compact-hero">
       <div class="container text-center">
-        <h1 class="display-4 fw-bold mb-3">Feedback</h1>
-        <p class="lead fs-5 mb-0">We value your input to help us improve our website and resources.</p>
+        <h1 class="display-4 fw-bold mb-3">Request Tutoring</h1>
+        <p class="lead fs-5 mb-0">
+          Get matched with a peer tutor and boost your learning journey!
+        </p>
       </div>
       <img src="images/brain2.png" alt="Decorative" class="hero-overlap-left" />
-      <img src="images/brain.png" alt="Decorative" class="hero-overlap-img about-hero-img" />
+      <img
+        src="images/brain.png"
+        alt="Decorative"
+        class="hero-overlap-img about-hero-img"
+      />
     </section>
 
     <!-- Info and Form Section -->
@@ -283,35 +294,96 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 mb-lg-0">
-            <h2>We Want Your Feedback</h2>
-            <p class="mb-3">Please help us improve our website and services by sharing any suggestions, issues, or comments you have. Your feedback is greatly appreciated!</p>
+            <h2>Get Free Tutoring</h2>
+            <p class="mb-3">
+              Fill out the form to request a tutor and we will get back to you as soon as possible with more information. We are ready to
+              help you succeed!
+            </p>
+
           </div>
           <div class="col-lg-6">
             <div class="contact-form-wrapper">
-              <h2>Feedback Form</h2>
-              <form action="https://formsubmit.co/bde812449ddc492f1d394510ec890962" method="POST">
-                <input type="text" name="_honey" style="display:none">
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://youngsteamvisionaries.academy/thank-you.html">
+              <h2>Request a Tutor</h2>
+              <form
+                action="https://formsubmit.co/youngsteamvisionaries@gmail.com"
+                method="POST"
+              >
+                <input type="text" name="_honey" style="display: none" />
+                <input type="hidden" name="_captcha" value="false" />
+                <input
+                  type="hidden"
+                  name="_next"
+                  value="https://youngsteamvisionaries.academy/thank-you.html"
+                />
                 <div class="row">
                   <div class="col-md-6 mb-3">
                     <label for="firstName">First Name*</label>
-                    <input type="text" class="form-control" id="firstName" name="First Name" required />
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="firstName"
+                      name="First Name"
+                      required
+                    />
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="lastName">Last Name*</label>
-                    <input type="text" class="form-control" id="lastName" name="Last Name" required />
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="lastName"
+                      name="Last Name"
+                      required
+                    />
                   </div>
                 </div>
                 <div class="mb-3">
                   <label for="email">Email Address*</label>
-                  <input type="email" class="form-control" id="email" name="Email" required />
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    name="Email"
+                    required
+                  />
                 </div>
-                <div class="mb-4">
-                  <label for="message">Message*</label>
-                  <textarea class="form-control" id="message" name="Message" rows="4" required></textarea>
+                <div class="mb-3">
+                  <label for="phone">Phone Number</label>
+                  <input
+                    type="tel"
+                    class="form-control"
+                    id="phone"
+                    name="Phone"
+                  />
                 </div>
-                <button type="submit" class="btn btn-primary">Send Feedback</button>
+                <div class="mb-3">
+                  <label for="studentGrade">What grade are you in?*</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="studentGrade"
+                    name="Student Grade"
+                    placeholder="e.g. 3rd, 5th, 7th"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="subjects"
+                    >Which do you want help with?*</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="subjects"
+                    name="Subjects Needed"
+                    placeholder="e.g. Math, Science, Reading"
+                    required
+                  />
+                </div>
+
+                <button type="submit" class="btn btn-primary">
+                  Request Tutor
+                </button>
               </form>
             </div>
           </div>
