--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         </div>
       </nav>
 
-      <!-- Hero -->
+      <!-- hero man -->
       <section class="py-5 hero-image text-light">
         <div class="container text-center">
           <h1 class="display-3 fw-bold mb-3">
@@ -306,7 +306,7 @@
         </div>
       </section>
 
-      <!-- Overview -->
+      <!-- overv -->
       <section id="overview" class="overview-section py-5" href="#overview">
         <div class="container">
           <img src="images/plane_line.png" alt="" class="decorative-line" />
@@ -444,7 +444,7 @@
         </div>
       </section>
 
-      <!-- Footer -->
+      <!-- feet -->
       <footer class="py-4 bg-dark text-light">
         <div class="container">
           <div class="row align-items-start">
@@ -489,7 +489,6 @@
             var input = document.getElementById("worksheetSearchInput");
             var val = input.value.trim();
             if (val) {
-              // Redirect to worksheet.html with keyword param
               window.location.href =
                 "worksheet.html?keyword=" + encodeURIComponent(val);
             }
