--- a/contact.html
+++ b/contact.html
@@ -31,37 +31,40 @@
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
         <div class="container flex-column">
-          <!-- Top row -->
           <div
             class="d-flex align-items-center w-100 top-row justify-content-center"
           >
-            <a class="navbar-brand fw-bold me-2" href="index.html"
-              >Young STEAM Visionaries</a
+            <a
+              class="navbar-brand fw-bold me-2 d-flex align-items-center"
+              href="index.html"
             >
-
-            <!-- Desktop search -->
-            <form class="ms-2 me-3 d-none d-lg-block">
+              <img
+                src="images/logo.png"
+                alt="Young STEAM Visionaries Logo"
+                style="height: 30px; width: auto; margin-right: 0.5rem"
+              />
+            </a>
+            <form
+              class="ms-2 me-3 d-none d-lg-block"
+              id="worksheetSearchForm"
+              role="search"
+            >
               <div class="input-group search-bar">
-                <span class="input-group-text bg-white border-end-0"
-                  ><i class="bi bi-search"></i
-                ></span>
+                <span class="input-group-text bg-white border-end-0">
+                  <i class="bi bi-search"></i>
+                </span>
                 <input
                   type="search"
                   class="form-control border-start-0"
                   placeholder='Search "addition worksheets"'
+                  id="worksheetSearchInput"
+                  name="q"
+                  autocomplete="off"
+                  aria-label="Search worksheets"
                 />
               </div>
             </form>
-
-            <!-- Login + Sign Up -->
-            <a
-              href="#"
-              class="text-decoration-none me-3 d-none d-lg-block login-link"
-              >Log In</a
-            >
-            <button class="btn btn-primary" @click="openModal">Sign Up</button>
-
-            <!-- Mobile toggler -->
+            <a class="btn btn-primary" href="worksheet.html">Free Worksheets</a>
             <button
               class="navbar-toggler ms-2"
               type="button"
@@ -71,10 +74,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
-
-          <!-- Bottom row -->
           <div class="collapse navbar-collapse mt-3 w-100" id="navMenu">
-            <!-- Mobile search -->
             <form class="d-lg-none my-3 w-100">
               <div class="input-group search-bar">
                 <span class="input-group-text bg-white border-end-0"
@@ -95,6 +95,150 @@
               <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
               </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Grades <span class="ms-0 arrow-down">&#x25BE;</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=Pre-K"
+                      >Pre-K</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=K"
+                      >Kindergarten</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=1st"
+                      >1st Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=2nd"
+                      >2nd Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=3rd"
+                      >3rd Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=4th"
+                      >4th Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=5th"
+                      >5th Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=6th"
+                      >6th Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=7th"
+                      >7th Grade</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?grade=8th"
+                      >8th Grade</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?grade=Early%20Elementary%20(Pre-K%20%E2%80%93%202nd)"
+                      >Early Elementary</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?grade=Elementary%20(3rd%20%E2%80%93%205th)"
+                      >Elementary</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?grade=Middle%20School"
+                      >Middle School</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Subjects <span class="ms-0 arrow-down">&#x25BE;</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?subject=Science"
+                      >Science</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?subject=Technology"
+                      >Technology</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?subject=Arts"
+                      >Arts</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?subject=Engineering"
+                      >Engineering</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="worksheet.html?subject=Math"
+                      >Math</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?subject=Reading"
+                      >Reading</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="worksheet.html?subject=Social%20Studies"
+                      >Social Studies</a
+                    >
+                  </li>
+                </ul>
+              </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="worksheet.html">Worksheets</a>
               </li>
@@ -102,17 +246,39 @@
                 <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">Additional Information</a>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More <span class="ms-0 arrow-down">&#x25BE;</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="become-tutor.html"
+                      >Become a Tutor</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="contact.html">Feedback</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="tutor.html"
+                      >Schedule Session</a
+                    >
+                  </li>
+                </ul>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
-    <!-- Contact  -->
     <section class="contact-section">
       <div class="container">
         <div class="row align-items-center">
@@ -198,7 +364,6 @@
   </div>
 </div>
     </section>
-      <!-- Footer -->
       <footer class="py-4 bg-dark text-light">
         <div class="container">
           <div class="row align-items-start">
@@ -243,7 +408,6 @@
             var input = document.getElementById("worksheetSearchInput");
             var val = input.value.trim();
             if (val) {
-              // Redirect to worksheet.html with keyword param
               window.location.href =
                 "worksheet.html?keyword=" + encodeURIComponent(val);
             }
