--- a/thank-you.html
+++ b/thank-you.html
@@ -289,7 +289,7 @@
       </div>
     </main>
 
-      <!-- Footer -->
+      <!-- footy -->
       <footer class="py-4 bg-dark text-light">
         <div class="container">
           <div class="row align-items-start">
@@ -334,7 +334,6 @@
             var input = document.getElementById("worksheetSearchInput");
             var val = input.value.trim();
             if (val) {
-              // Redirect to worksheet.html with keyword param
               window.location.href =
                 "worksheet.html?keyword=" + encodeURIComponent(val);
             }
