--- a/tutor.html
+++ b/tutor.html
@@ -273,7 +273,7 @@
       </nav>
 
 
-    <!-- Hero Section -->
+    <!-- hero  -->
     <section class="compact-hero">
       <div class="container text-center">
         <h1 class="display-4 fw-bold mb-3">Request Tutoring</h1>
@@ -289,7 +289,7 @@
       />
     </section>
 
-    <!-- Info and Form Section -->
+    <!-- secn -->
     <section class="contact-section">
       <div class="container">
         <div class="row align-items-center">
@@ -391,7 +391,7 @@
       </div>
     </section>
 
-      <!-- Footer -->
+      <!-- foot -->
       <footer class="py-4 bg-dark text-light">
         <div class="container">
           <div class="row align-items-start">
@@ -436,7 +436,6 @@
             var input = document.getElementById("worksheetSearchInput");
             var val = input.value.trim();
             if (val) {
-              // Redirect to worksheet.html with keyword param
               window.location.href =
                 "worksheet.html?keyword=" + encodeURIComponent(val);
             }
