--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -177,6 +177,42 @@
             "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
           download: "#",
         },
+            {
+              id: 4,
+              title: "Visual Addition Practice 1",
+              img: "images/4.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 5,
+              title: "Visual Addition Practice 2",
+              img: "images/5.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 6,
+              title: "Visual Addition Practice 3",
+              img: "images/6.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
       ];
 
       createApp({
