--- a/worksheet.html
+++ b/worksheet.html
@@ -460,7 +460,7 @@
               id: 1,
               title: "Visual Subtraction Practice",
               img: "images/1.png",
-              grades: ["K", "1st"],
+              grades: ["Pre-K", "K", "1st"],
               subjects: ["Math"],
               games: [],
               summary: "Practice subtracting numbers with visual clues.",
@@ -472,7 +472,7 @@
               id: 2,
               title: "Visual Subtraction Practice 2",
               img: "images/2.png",
-              grades: ["K", "1st"],
+              grades: ["Pre-K", "K", "1st"],
               subjects: ["Math"],
               games: [],
               summary: "Practice subtracting numbers with visual clues.",
@@ -484,12 +484,48 @@
               id: 3,
               title: "Visual Subtraction Practice 3",
               img: "images/3.png",
-              grades: ["K", "1st"],
+              grades: ["Pre-K", "K", "1st"],
               subjects: ["Math"],
               games: [],
               summary: "Practice subtracting numbers with visual clues.",
               description:
                 "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 4,
+              title: "Visual Addition Practice 1",
+              img: "images/4.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 5,
+              title: "Visual Addition Practice 2",
+              img: "images/5.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 6,
+              title: "Visual Addition Practice 3",
+              img: "images/6.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
               download: "#",
             },
           ]);
