--- a/become-tutor.html
+++ b/become-tutor.html
@@ -280,7 +280,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 mb-lg-0">
             <h2>Become a Tutor</h2>
-            <p class="mb-3">Email us at <a href="mailto:info@youngsteamvisionaries.academy">info@youngsteamvisionaries.academy</a> or fill out the form to let us know your interest to become a tutor. We welcome passionate individuals who want to make a difference, and will provide more information once we recieve your response!</p>
+            <p class="mb-3">Email us at <a href="mailto:youngsteamvisionaries@gmail.com">YoungSteamVisionaries@gmail.com</a> or fill out the form to let us know your interest to become a tutor. We welcome passionate individuals who want to make a difference, and will provide more information once we recieve your response!</p>
           </div>
           <div class="col-lg-6">
             <div class="contact-form-wrapper">
@@ -342,7 +342,7 @@
             <div class="col-md-6 text-md-end">
               <h5 class="mb-3" style="font-weight: 600">Contact Us</h5>
               <p class="mb-0" style="color: #d1d5db">
-                <i class="bi bi-envelope-fill me-2"></i>
+                <i class="bi bi-envelope-fill me-2" ></i>
                 YoungSTEAMVisionaries@gmail.com
               </p>
             </div>
