--- a/worksheet.html
+++ b/worksheet.html
@@ -528,6 +528,66 @@
                 "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
               download: "#",
             },
+            {
+              id: 7,
+              title: "Technology Matching 1",
+              img: "images/7.png",
+              grades: ["K", "1st", "2nd","3rd"],
+              subjects: ["Technoogy"],
+              games: [],
+              summary: "Match common technology items to their names.",
+              description:
+                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
+              download: "#",
+            },
+            {
+              id: 8,
+              title: "Technology Matching 2",
+              img: "images/8.png",
+              grades: ["K", "1st", "2nd","3rd"],
+              subjects: ["Technoogy"],
+              games: [],
+              summary: "Match common technology items to their names.",
+              description:
+                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
+              download: "#",
+            },
+            {
+              id: 9,
+              title: "Keyboard Recognition",
+              img: "images/9.png",
+              grades: ["K", "1st", "2nd"],
+              subjects: ["Technology"],
+              games: [],
+              summary: "Identify and find letters on a keyboard.",
+              description:
+                    "This worksheet introduces students to a keyboard, asking them to find and circle the letters that spell their name, helping build familiarity with typing tools.",
+              download: "#",
+            },
+            {
+              id: 10,
+              title: "Coding by Color 1",
+              img: "images/10.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 11,
+              title: "Coding by Color 2",
+              img: "images/11.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Technology", "Logic Riddles"],
+              games: [],
+              summary: "Copy color patterns to simulate basic coding logic.",
+              description:
+                "This worksheet will help strengthen pattern recognition and sequencing skills by copying colored blocks, a great early introduction to coding concepts.",
+              download: "#",
+            },
           ]);
 
           try {
