--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -154,7 +154,7 @@
           download: "#",
         },
         {
-          id: 2,
+          id: 11,
           title: "Visual Subtraction Practice 2",
           img: "images/2.png",
           grades: ["K", "1st"],
@@ -262,7 +262,7 @@
               download: "#",
             },
             {
-              id: 11,
+              id: 2,
               title: "Coding by Color 2",
               img: "images/11.png",
               grades: ["Pre-K","K", "1st"],
@@ -273,6 +273,55 @@
                 "This worksheet will help strengthen pattern recognition and sequencing skills by copying colored blocks, a great early introduction to coding concepts.",
               download: "#",
             },
+            {
+              id: 12,
+              title: "Emoji Code Breaker",
+              img: "images/12.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+              download: "#",
+            },
+            {
+              id: 13,
+              title: "Emoji Code Breaker 2",
+              img: "images/13.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+              download: "#",
+            },
+            {
+              id: 14,
+              title: "Animal Code Breaker",
+              img: "images/14.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+              download: "#",
+            },
+            {
+              id: 15,
+              title: "Animal Code Breaker 2",
+              img: "images/15.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+              download: "#",
+            },
+
       ];
 
       createApp({
