--- a/worksheet.html
+++ b/worksheet.html
@@ -469,15 +469,27 @@
               download: "#",
             },
             {
-              id: 2,
-              title: "Visual Subtraction Practice 2",
-              img: "images/2.png",
-              grades: ["Pre-K", "K", "1st"],
-              subjects: ["Math"],
+              id: 7,
+              title: "Technology Matching 1",
+              img: "images/7.png",
+              grades: ["K", "1st", "2nd","3rd"],
+              subjects: ["Technoogy"],
               games: [],
-              summary: "Practice subtracting numbers with visual clues.",
+              summary: "Match common technology items to their names.",
               description:
-                "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
+                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
+              download: "#",
+            },
+            {
+              id: 12,
+              title: "Emoji Code Breaker",
+              img: "images/12.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
               download: "#",
             },
             {
@@ -505,6 +517,18 @@
               download: "#",
             },
             {
+              id: 14,
+              title: "Animal Code Breaker",
+              img: "images/14.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+              download: "#",
+            },
+            {
               id: 5,
               title: "Visual Addition Practice 2",
               img: "images/5.png",
@@ -514,42 +538,6 @@
               summary: "Practice adding numbers with visual clues.",
               description:
                 "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
-              id: 6,
-              title: "Visual Addition Practice 3",
-              img: "images/6.png",
-              grades: ["Pre-K","K", "1st"],
-              subjects: ["Math"],
-              games: [],
-              summary: "Practice adding numbers with visual clues.",
-              description:
-                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
-              download: "#",
-            },
-            {
-              id: 7,
-              title: "Technology Matching 1",
-              img: "images/7.png",
-              grades: ["K", "1st", "2nd","3rd"],
-              subjects: ["Technoogy"],
-              games: [],
-              summary: "Match common technology items to their names.",
-              description:
-                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
-              download: "#",
-            },
-            {
-              id: 8,
-              title: "Technology Matching 2",
-              img: "images/8.png",
-              grades: ["K", "1st", "2nd","3rd"],
-              subjects: ["Technoogy"],
-              games: [],
-              summary: "Match common technology items to their names.",
-              description:
-                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
               download: "#",
             },
             {
@@ -565,9 +553,57 @@
               download: "#",
             },
             {
+              id: 2,
+              title: "Visual Subtraction Practice 2",
+              img: "images/2.png",
+              grades: ["Pre-K", "K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice subtracting numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic subtraction skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 8,
+              title: "Technology Matching 2",
+              img: "images/8.png",
+              grades: ["K", "1st", "2nd","3rd"],
+              subjects: ["Technoogy"],
+              games: [],
+              summary: "Match common technology items to their names.",
+              description:
+                "This worksheet helps students recognize and label everyday technology devices like tablets, printers, and keyboards, improving both vocabulary and tech awareness.",
+              download: "#",
+            },
+            {
               id: 10,
               title: "Coding by Color 1",
               img: "images/10.png",
+              grades: ["Pre-K","K", "1st"],
+              subjects: ["Math"],
+              games: [],
+              summary: "Practice adding numbers with visual clues.",
+              description:
+                "This worksheet helps students practice basic addition skills with fun visuals to better understand the fundamentals.",
+              download: "#",
+            },
+            {
+              id: 13,
+              title: "Emoji Code Breaker 2",
+              img: "images/13.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
+              download: "#",
+            },
+            {
+              id: 6,
+              title: "Visual Addition Practice 3",
+              img: "images/6.png",
               grades: ["Pre-K","K", "1st"],
               subjects: ["Math"],
               games: [],
@@ -586,6 +622,18 @@
               summary: "Copy color patterns to simulate basic coding logic.",
               description:
                 "This worksheet will help strengthen pattern recognition and sequencing skills by copying colored blocks, a great early introduction to coding concepts.",
+              download: "#",
+            },
+            {
+              id: 15,
+              title: "Animal Code Breaker 2",
+              img: "images/15.png",
+              grades: [ "1st", "2nd","3rd"],
+              subjects: ["Logic Riddles", "Word Puzzles", "Word Search", "Reading", "Arts"],
+              games: [],
+              summary: "Crack emoji codes using a fun key chart to reveal secret words.",
+              description:
+                "This worksheet uses fun emojis and pictures to help practice early decoding, pattern recognition, and letter matching as they use a visual key. This is great for building problem-solving and literacy skills in an engaging activity.",
               download: "#",
             },
           ]);
